# discord98

./: .gitignore  README.md  THIRD_PARTY_NOTICES
res/: app.manifest
src/: resource.h  resource.rc
src/core/: DiscordInstance.cpp  DiscordInstance.hpp  Frontend.hpp
src/core/config/: LocalSettings.cpp  LocalSettings.hpp
src/core/models/: Guild.hpp
src/core/stream/: H264Decoder.cpp  H264Decoder.hpp  H264Encoder.cpp  H264Encoder.hpp  LoopbackCapture.cpp  LoopbackCapture.hpp  ScreenCapture.cpp  ScreenCapture.hpp  StreamManager.cpp  StreamManager.hpp  StreamViewer.cpp  StreamViewer.hpp  VideoRTPReceiver.cpp  VideoRTPReceiver.hpp  VideoRTPSender.cpp  VideoRTPSender.hpp
src/core/voice/: VoiceGateway.hpp  VoiceManager.cpp  VoiceManager.hpp
src/windows/: ChannelView.cpp  ChannelView.hpp  ChannelViewOld.hpp  Frontend_Win32.cpp  Frontend_Win32.hpp  IChannelView.hpp  Main.cpp  Main.hpp  OptionsDialog.cpp  ScreenPickerDialog.cpp  ScreenPickerDialog.hpp  StatusBar.cpp  StatusBar.hpp  StreamViewerWindow.cpp  StreamViewerWindow.hpp  VoicePanel.cpp  VoicePanel.hpp  WindowMessages.hpp
voice/: CMakeLists.txt
voice/include/: audio_devices.h  audio_engine.h  discord_voice.h  udp_socket.h  voice_client.h  voice_types.h
voice/src/: audio_devices.cpp  audio_engine.cpp  miniaudio_impl.cpp  udp_socket.cpp  voice_client.cpp
vs/: DiscordMessenger.vcxproj  DiscordMessenger.vcxproj.filters
